[gd_scene load_steps=8 format=1]

[ext_resource path="res://PlayerBlue.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/player_blue.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/rotation_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/btnMove.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/MovementPoint.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/DiceDot.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": Vector2Array(  )
}

[node name="Player" type="Node2D"]

script/script = ExtResource( 1 )
LabelText = "1"
PlayerColor = "blue"
Direction = 0

[node name="Path2D" type="Path2D" parent="."]

editor/display_folded = true
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="button_rotate_left" type="TextureButton" parent="Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = -10.0
margin/right = 26.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="button_rotate_right" type="TextureButton" parent="Sprite"]

rect/scale = Vector2( -1, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = -10.0
margin/right = 4.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="button_move" type="TextureButton" parent="Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = -22.0
margin/right = 10.0
margin/bottom = 10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="MovePoint1" type="Sprite" parent="Sprite"]

visibility/visible = false
transform/pos = Vector2( -9, 15 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
modulate = Color( 0.0700074, 0.957031, 0.018692, 1 )

[node name="MovePoint2" type="Sprite" parent="Sprite"]

visibility/visible = false
transform/pos = Vector2( 0, 17 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
modulate = Color( 0.0700074, 0.957031, 0.018692, 1 )

[node name="MovePoint3" type="Sprite" parent="Sprite"]

visibility/visible = false
transform/pos = Vector2( 9, 15 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
modulate = Color( 0.0700074, 0.957031, 0.018692, 1 )

[node name="DiceDot" type="Sprite" parent="Sprite"]

transform/pos = Vector2( 0, -45 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]

anchor/left = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = -7.0
margin/right = 5.0
margin/bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Sprite/button_rotate_left" to="." method="_on_rotation_arrow_pressed"]

[connection signal="pressed" from="Sprite/button_rotate_right" to="." method="_on_rotation_arrow2_pressed"]

[connection signal="pressed" from="Sprite/button_move" to="." method="_on_button_move_pressed"]


